# lunatree

./: Cargo.toml  README.md  Rocket.toml  flake.nix
db/: docker-compose.yaml
migrations/2022-04-30-040849_user-creation/: up.sql
src/: auth.rs  db.rs  main.rs  schema.rs  users.rs
templates/: base.html.tera  login.html.tera  register.html.tera
