[package]
name = "lunatree"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rocket = { git = "https://github.com/sergioBenitez/Rocket.git"}
rocket_dyn_templates = { git = "https://github.com/sergioBenitez/Rocket.git", features = ["tera"]}
rocket_sync_db_pools = { git = "https://github.com/sergioBenitez/Rocket.git", features = ["diesel_postgres_pool"] }
diesel = "1.4.8"
diesel_migrations = "1.4.0"
rand = "0.8.5"
rust-argon2 = "1.0.0"
