[package]
edition = "2021"
name = "lunatree"
version = "0.1.0"
[dependencies]
argon2 = "0.4.0"
diesel = "1.4.8"
diesel_migrations = "1.4.0"

[dependencies.rand_core]
features = ["std"]
version = "0.6.3"

[dependencies.rocket]
git = "https://github.com/sergioBenitez/Rocket.git"

[dependencies.rocket_dyn_templates]
features = ["tera"]
git = "https://github.com/sergioBenitez/Rocket.git"

[dependencies.rocket_sync_db_pools]
features = ["diesel_postgres_pool"]
git = "https://github.com/sergioBenitez/Rocket.git"
re = { version = "0.6.3", features = ["std"] }
argon2 = "0.4.0"
